Remove -XX:+TieredCompilation -XX:+AggressiveOpts from *run.sh scripts
since it has been added to env.sh JAVA_OPTS for all JVM programs.